# nexorm

./: .gitignore  README.md  __init__.py  database.py  exceptions.py  fields.py  manager.py  model.py  pyproject.toml  query.py  validators.py
dialects/: __init__.py  sqlite.py
migrations/: engine.py  operations.py  writer.py
sql/: __init__.py  crud.py
src/nexorm/: __init__.py  __main__.py  cli.py  database.py  fields.py  lookups.py  manager.py  model.py  options.py  query.py  raw.py  registry.py  relations.py  transaction.py  uuid.py  validators.py
src/nexorm/dialects/: __init__.py  base.py  mysql.py  postgres.py  sqlite.py
src/nexorm/migrations/: autodetector.py  engine.py  operations.py  state.py
src/nexorm/sql/: compiler.py  crud.py  expressions.py
tests/: test_backends.py  test_basic.py
